--- a/antora.yml
+++ b/antora.yml
@@ -1,11 +1,11 @@
-name: csmi-stages-2021
-title: Master CSMI 2021
+name: csmi-stages-{year}
+title: Master CSMI {year}
 version: master
 start_page: ROOT:index.adoc
 asciidoc: 
   attributes: 
     hide-uri-scheme: '' 
-    year: 2021
+    year: {year}
 nav:
 - modules/ROOT/nav.adoc
 - modules/m1/nav.adoc
