--- a/package.json
+++ b/package.json
@@ -21,20 +21,28 @@
   ],
   "scripts": {
     "prose": "write-good --parse **/*.adoc",
-    "serve": "http-server public/ -d -i",
-    "dev": "antora --stacktrace generate --cache-dir .cache/antora/ --clean site-dev.yml",
-    "antora": "antora --stacktrace generate --cache-dir cache --clean site.yml",
+    "start": "http-server public/ -d -i",
+    "antora": "antora --stacktrace generate --cache-dir cache/antora --clean site.yml",
     "validate": "antora --stacktrace generate --cache-dir cache --generator ./generator/xref-validator.js --clean site.yml",
     "linkcheck": "broken-link-checker --filter-level 3 --recursive --verbose"
   },
   "dependencies": {
-    "@antora/cli": "^2.3.4",
-    "@antora/site-generator-default": "^2.3.4",
-    "@djencks/asciidoctor-template": "^0.0.3"
+    "@antora/cli": "^3.1",
+    "@antora/collector-extension": "^1.0.0-alpha.3",
+    "@antora/site-generator-default": "^3.1",
+    "@asciidoctor/core": "^2.2.6",
+    "asciidoctor": "^2.2.6",
+    "asciidoctor-jupyter": "^0.5.0",
+    "asciidoctor-kroki": "^0.17.0",
+    "handlebars": "^4.7.7",
+    "handlebars-utils": "^1.0.6",
+    "@djencks/asciidoctor-template": "^0.0.3",
+    "@feelpp/asciidoctor-remote-include-processor": "^0.0.6",
+    "asciidoctor-emoji": "^0.4.2"
   },
   "devDependencies": {
     "broken-link-checker": "^0.7.8",
-    "http-server": "^0.11.1",
+    "http-server": "^14.1.1",
     "write-good": "^0.13.1"
   },
   "keywords": [
