--- a/site.yml
+++ b/site.yml
@@ -1,14 +1,14 @@
 site:
   title: Master CSMI::Stages {year}
   url: https://master-csmi.github.io/csmi-stages-{year}
-  start_page: csmi-stages-2021:ROOT:index.adoc
+  start_page: csmi-stages-{year}:ROOT:index.adoc
 content:
   sources:
   - url: https://github.com/master-csmi/csmi-stages-{year}
     branches: main
 ui:
   bundle:
-    url: https://gitlab.com/feelpp/antora-ui-default/-/jobs/artifacts/feelpp/raw/build/ui-bundle.zip?job=bundle-stable
+    url: https://github.com/feelpp/antora-ui/releases/latest/download/ui-bundle.zip 
     snapshot: true
 output:
   clean: true
